--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,12 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>0.12.5</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/com.github.java-json-tools/json-patch -->
+        <dependency>
+            <groupId>com.github.java-json-tools</groupId>
+            <artifactId>json-patch</artifactId>
+            <version>1.13</version>
+        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
